# moniter-my-money

./: README.md  docker-compose.yaml
.github/workflows/: ci-cd.yml
backend/: db.sqlite3  mac.mn  pyproject.toml
backend/.zed/: settings.json
backend/apps/accounts/: models.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/transactions/: admin.py  models.py  serializer.py  views.py
backend/apps/transactions/migrations/: 0001_initial.py  0002_rename_update_at_transaction_updated_at.py  0003_alter_transaction_category.py
backend/config/: settings.py  urls.py
docker/: backend.dockerfile  frontend.dockerfile
frontend/: package.json
frontend/src/lib/api/: budget.ts
frontend/src/lib/components/layout/: Navbar.svelte
frontend/src/lib/components/transactions/: TransactionForm.svelte
frontend/src/lib/components/ui/: Button.svelte  Card.svelte  Input.svelte  Modal.svelte  Select.svelte
frontend/src/lib/styles/: global.css
frontend/src/lib/types/: transaction.ts
frontend/src/routes/: +layout.svelte  +page.svelte  page.css
frontend/src/routes/transactions/: +page.svelte
